[gd_scene load_steps=35 format=3 uid="uid://b2kjra08f3yr"]

[ext_resource type="Texture2D" uid="uid://dqpyeedqcn6kt" path="res://assets/generic_char_v0.2/png/blue/char_blue_1.png" id="1_8p05u"]
[ext_resource type="Script" uid="uid://5eye4f7mi8er" path="res://Scenes/player/player.gd" id="1_eo61r"]
[ext_resource type="Script" uid="uid://bqh2sk1e1soxr" path="res://Scenes/StateMachine/state_machine.gd" id="3_mxepk"]
[ext_resource type="Script" uid="uid://cmfivtv0hwhx8" path="res://Scenes/player/states/idle.gd" id="4_6upyo"]
[ext_resource type="Script" uid="uid://cs1dukph2ljes" path="res://Scenes/player/states/running.gd" id="5_xxarj"]
[ext_resource type="Script" uid="uid://dv63604e5x4ps" path="res://Scenes/player/states/jump.gd" id="6_6k3cy"]
[ext_resource type="Script" uid="uid://vo067bs24e5j" path="res://Scenes/player/states/fall.gd" id="7_xxarj"]
[ext_resource type="Script" uid="uid://vqahs8fsfjlc" path="res://Scenes/player/states/landing.gd" id="8_6k3cy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dpkfr"]
atlas = ExtResource("1_8p05u")
region = Rect2(112, 224, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_kysaj"]
atlas = ExtResource("1_8p05u")
region = Rect2(168, 224, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_egohg"]
atlas = ExtResource("1_8p05u")
region = Rect2(224, 224, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_eo61r"]
atlas = ExtResource("1_8p05u")
region = Rect2(0, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxepk"]
atlas = ExtResource("1_8p05u")
region = Rect2(56, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_e41v5"]
atlas = ExtResource("1_8p05u")
region = Rect2(112, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_ca0mu"]
atlas = ExtResource("1_8p05u")
region = Rect2(168, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_6upyo"]
atlas = ExtResource("1_8p05u")
region = Rect2(224, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxarj"]
atlas = ExtResource("1_8p05u")
region = Rect2(280, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_6k3cy"]
atlas = ExtResource("1_8p05u")
region = Rect2(112, 168, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_kd672"]
atlas = ExtResource("1_8p05u")
region = Rect2(168, 168, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3oqc"]
atlas = ExtResource("1_8p05u")
region = Rect2(224, 168, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8lfk"]
atlas = ExtResource("1_8p05u")
region = Rect2(280, 168, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua3np"]
atlas = ExtResource("1_8p05u")
region = Rect2(224, 224, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnu3u"]
atlas = ExtResource("1_8p05u")
region = Rect2(280, 224, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwmec"]
atlas = ExtResource("1_8p05u")
region = Rect2(336, 224, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_uawwb"]
atlas = ExtResource("1_8p05u")
region = Rect2(0, 112, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_ag54m"]
atlas = ExtResource("1_8p05u")
region = Rect2(56, 112, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7b1g"]
atlas = ExtResource("1_8p05u")
region = Rect2(112, 112, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0khc"]
atlas = ExtResource("1_8p05u")
region = Rect2(168, 112, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vj4j"]
atlas = ExtResource("1_8p05u")
region = Rect2(224, 112, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyrd7"]
atlas = ExtResource("1_8p05u")
region = Rect2(280, 112, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_ic3d6"]
atlas = ExtResource("1_8p05u")
region = Rect2(336, 112, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_spm8d"]
atlas = ExtResource("1_8p05u")
region = Rect2(392, 112, 56, 56)

[sub_resource type="SpriteFrames" id="SpriteFrames_dpkfr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpkfr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kysaj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egohg")
}],
"loop": true,
"name": &"fall",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eo61r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxepk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e41v5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ca0mu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6upyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxarj")
}],
"loop": true,
"name": &"idle",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6k3cy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kd672")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3oqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8lfk")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 0.2,
"texture": SubResource("AtlasTexture_ua3np")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnu3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwmec")
}],
"loop": false,
"name": &"landing",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uawwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ag54m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7b1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0khc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vj4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyrd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ic3d6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_spm8d")
}],
"loop": true,
"name": &"runing",
"speed": 16.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kysaj"]
size = Vector2(8, 32)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_eo61r")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -29)
sprite_frames = SubResource("SpriteFrames_dpkfr")
animation = &"landing"
frame = 1
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -17)
shape = SubResource("RectangleShape2D_kysaj")

[node name="CoyoteTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1
one_shot = true

[node name="JumpRequestTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1
one_shot = true

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("inital_state")]
script = ExtResource("3_mxepk")
inital_state = NodePath("PlayerIdle")

[node name="PlayerIdle" type="Node" parent="StateMachine"]
script = ExtResource("4_6upyo")
metadata/_custom_type_script = "uid://cmfivtv0hwhx8"

[node name="PlayerRunning" type="Node" parent="StateMachine"]
script = ExtResource("5_xxarj")
metadata/_custom_type_script = "uid://cs1dukph2ljes"

[node name="PlayerJump" type="Node" parent="StateMachine"]
script = ExtResource("6_6k3cy")
metadata/_custom_type_script = "uid://dv63604e5x4ps"

[node name="PlayerFall" type="Node" parent="StateMachine"]
script = ExtResource("7_xxarj")
metadata/_custom_type_script = "uid://vo067bs24e5j"

[node name="PlayerLanding" type="Node" parent="StateMachine"]
script = ExtResource("8_6k3cy")
metadata/_custom_type_script = "uid://vqahs8fsfjlc"
